--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --config .prettierrc.json --ignore-path .prettierignore --write \"**/*.{js,json,ts,tsx,md,html}\"",
-    "prepare": "husky install"
+    "format": "prettier --config .prettierrc.json --ignore-path .prettierignore --write \"**/*.{js,json,ts,tsx,md,html}\""
+  },
+  "dependencies": {
+    "@dreamirl/dreamengine": "github:dreamirl/dreamengine#pixi-v6"
   },
   "devDependencies": {
-    "husky": "^7.0.0",
     "prettier": "^2.2.0",
-    "pretty-quick": "^3.1.1"
+    "pretty-quick": "^3.1.1",
+    "typescript": "^5.0.4"
   },
   "keywords": [],
   "author": "",
